hard-gists/8b100c205b8c35b3c8ce/run.log
=== Docker Run Log for 8b100c205b8c35b3c8ce ===
Started at: Mi 29. Okt 18:07:39 CET 2025

[2025-10-29 18:07:39] START: Running container for 8b100c205b8c35b3c8ce
[2025-10-29 18:07:40] SUCCESS: Container 42f5c1f22209950a239636d0580cbe98535a198c5eb0cf260e40543d3ea16f88 started for 8b100c205b8c35b3c8ce
=== Container logs for 8b100c205b8c35b3c8ce ===
  File "/snippet.py", line 17
    print "Cannot pause"
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8b100c205b8c35b3c8ce ===
[2025-10-29 18:07:42] INFO: Container 42f5c1f22209950a239636d0580cbe98535a198c5eb0cf260e40543d3ea16f88 has stopped
